--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                 <h4 class="profesion-company" > <span>Academy IT</span> </h4>
                                 <h4> <span>Trainee Quality Assurance Tester</span> </h4>
                                 <h4 class="profesion-company" > <span> RSA </span> </h4>
-                                <h4> <span>I continue training in neural networks</span> </h4>
+                                <h4> <span>I'm interested neural networks</span> </h4>
                             </div>
                           </div>
                     </div>           
