--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
              <div>
               <!--Main info-->
               <div class="info-container">
-                   <h2 class="profecion">Trainee Web developer/ Trainee Quality Assurance tester/Mod tester/ Game tester/ Game developer/ ZeroCoder</h2>
+                   <h2 class="profecion">Trainee-Junior Web developer/ Trainee Quality Assurance tester/Mod tester/ Game tester/ Game developer/ ZeroCoder</h2>
                    <h1 class="my-name">Vladimir Kulida</h1>
                    <p class="discription">
                     Experience in developing and testing mods, game add-ons, Gem dev  than one year. Using different types of testing. Writing checklist, test cases and bug reports. Design-development-testing of the sites. Kanban. OS: Windows, Android. Browsers: Chrome, Yandex. Have some knowledge about bug tracking systems: Jira. Languages: HTML, CSS, (Python, JavaScript-basic). Perseverance and attention to detail are the qualities that make it possible to find bugs and describe errors in detail to eliminate defects. Creating your own mods and games, improving testing methods.Developed analytical and algorithmic thinking to achieve the desired results.</p>
