--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                      <span class="tech-skill-text">Team Leader, Discord</span> 
                  </li>
                  <li class="tech-skills-item"> 
-                     <span class="tech-skill-text">Streamer</span>
+                     <span class="tech-skill-text">Streamer / Bloger</span>
                  </li>
                  <li class="tech-skills-item"> 
                      <span class="tech-skill-text">Adobe Dreamweaver</span>
