--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                                 <h4> <span>Trainee Quality Assurance Tester</span> </h4>
                                 <h4 class="profesion-company" > <span> RSA </span> </h4>
                                 <h4> <span>I'm interested neural networks</span> </h4>
+                                <h4> <span>https://app.getgrass.io/register?referralCode=rfX3HIlSorzfYqN<span> </h4>
                             </div>
                           </div>
                     </div>           
