--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                 <h4> <span>Trainee Quality Assurance Tester</span> </h4>
                                 <h4 class="profesion-company" > <span> RSA </span> </h4>
                                 <h4> <span>I'm interested neural networks</span> </h4>
-                                <h4> <span>https://app.getgrass.io/register?referralCode=rfX3HIlSorzfYqN<span> </h4>
+                                <span class="contact-tite-type">GR:</span><a class="contact-link" href="https://app.getgrass.io/register?referralCode=rfX3HIlSorzfYqN<span></a>
                             </div>
                           </div>
                     </div>           
